force-app/main/default/objects/LLC_BI__Scorecard_Detail__c/LLC_BI__Scorecard_Detail__c.object-meta.xml
<CustomObject>
    <description>The object stores detailed elements that was used in the creation of the decision associated with the scorecard.</description>
    <label>Scorecard Detail</label>
    <nameField>
        <label>Scorecard Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>