force-app/main/default/objects/LLC_BI__Scorecard_Detail__c/fields/LLC_BI__Assigned_Points__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assigned_Points__c</fullName>
    <description>This field is used to capture the number of points assigned to the evaluation. This will be displayed to the user if the financial institution is utilizing points when evaluating criteria on the loan.  It is automatically populated based on the points accumulated and configured through the Visual Flow Logic.</description>
    <label>Assigned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>