force-app/main/default/objects/LLC_BI__Scorecard_Detail__c/fields/LLC_BI__Maximum_Points__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Points__c</fullName>
    <description>This field is used to display the maximum number of points that can be assigned to the criteria being evaluated. It is displayed in the key scoring criteria section of the scorecard if the financial institution is utilizing points when evaluating loans. It is populated automatically when a score card is generated and is configurable through the Visual Flow logic, where a financial institution can adjust the values and decide whether or not they want to use points.</description>
    <label>Maximum Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>