force-app/main/default/objects/LLC_BI__Scorecard_Detail__c/fields/LLC_BI__Scorecard__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scorecard__c</fullName>
    <description>This field is a reference field that links the scorecard details to the appropriate score card. The field is not visible to users but is used behind the scenes to link the details with the scorecard they belong to. This field is automatically populated when a scorecard is generated</description>
    <label>Scorecard</label>
    <referenceTo>LLC_BI__Scorecard__c</referenceTo>
    <relationshipLabel>Scorecard Details</relationshipLabel>
    <relationshipName>Scorecard_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>