force-app/main/default/objects/LLC_BI__Scorecard_Detail__c/fields/LLC_BI__Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value__c</fullName>
    <description>This field is used to store the value that was used during the specific evaluation of the criteria that was performed. This value is shown on the scorecard in the key scoring criteria section of the decision overview; this field specifies the value of that criteria received during evaluation.</description>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>